<resources>
    <string name="app_name">ЛучшийЛаунчер</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_next_btn">Далее</string>
    <string name="welcome_text_hello_to_user">Вы скачали лучший лаунчер! Готовы узреть его мощь?</string>
    <string name="welcome_text_hello_to_user_2">Необъятные возможности для управления Вашими приложениями!</string>
    <string name="welcome_text_hello_to_user_3">Удобный минималистичный древний интерфейс!</string>
    <string name="welcome_text_choose_theme">Выберите тему лаунчера</string>
    <string name="welcome_text_choose_count_icons">Выберите размер таблицы иконок</string>
    <string name="dark_style">Темная сторона</string>
    <string name="light_style">Светлая сторона</string>
    <string name="cells_opt_1">Стандартный</string>
    <string name="cells_opt_2">Большой</string>
    <string name="info">Инфо</string>
    <string name="delete">Удалить</string>
    <string name="delete_from_favorites">Удалить из избранного</string>
    <string name="ok">OK</string>
    <string name="info_about">Настоящее имя: %1$s.\nЧисло кликов: %2$d.</string>
    <string name="header_popular">Популярные</string>
    <string name="header_new">Новые</string>
    <string name="add_to_favorites">В избранное</string>
    <string name="favorites">Избранное</string>
    <string name="enter">Перейти</string>
    <string name="history">История</string>
    <string name="invalid_uri">Неверный URI, попробуйте еще раз</string>
    <string name="all_icons">Все приложения</string>
    <string name="favorite_icons">Избранные приложения</string>
    <string name="settings">Настройки</string>
    <string name="controls">Управление</string>
    <string name="choose_history">Выберите URL</string>
    <string name="hide_favs">Скрыть избранные приложения</string>
    <string name="hide_favs_fragment">Скрыть избранный раздел</string>
    <string name="del_favs">Удалить избранные</string>
    <string name="URL_block">Настройки поиска</string>
    <string name="URL_limit">Количество запомненных</string>
    <string name="URL_clear">Очистить историю</string>
    <string name="wrong_format">Неверный формат, введите число</string>
    <string name="URL_cleared">История очищена!</string>
    <string name="fav_cleared">Избранное удалено!</string>
    <string name="general_settings">Общие настройки</string>
    <string name="change_theme">Сменить тему</string>
    <string name="change_cells">Сменить кол-во ячеек</string>
    <string name="grant_permission">Пожалуйста, дайте разрешение для добавления контактов и осуществления звонков</string>
    <string name="contacts">Контакты</string>
    <string name="permission_read">Чтение URL</string>
    <string name="permission_read_summary">Разрешить чтение URL</string>
    <string name="permission_read_all">Чтение всех URL</string>
    <string name="permission_read_all_summary">Разрешить чтение всех URL</string>
    <string name="permission_write">Запись URL</string>
    <string name="permission_write_summary">Разрешить запись URL</string>
    <string name="loading_contacts">Загружаем контакты…</string>
    <string name="email">Email:</string>
    <string name="no_email">Нет email</string>
    <string name="bkg_picture_block">Обновление фона</string>
    <string name="change_upd_pict_interval">Частота обновления</string>
    <string name="upd_pict_now">Обновить сейчас</string>
    <string name="upd_pict_1">15 мин</string>
    <string name="upd_pict_2">1 ч</string>
    <string name="upd_pict_3">8 ч</string>
    <string name="upd_pict_4">24 ч</string>
    <string name="updating">Обновляем…</string>
    <string name="same_picts_activities">Одинаковый фон</string>
</resources>
