<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/favorite_icons">

        <CheckBoxPreference
            android:key="hide_favs"
            android:title="@string/hide_favs" />

        <CheckBoxPreference
            android:key="hide_favs_fragment"
            android:title="@string/hide_favs_fragment" />

        <Preference
            android:key="del_favs"
            android:title="@string/del_favs" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/URL_block">

        <EditTextPreference
            android:key="URL_limit"
            android:title="@string/URL_limit" />

        <Preference
            android:key="URL_clear"
            android:title="@string/URL_clear" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/general_settings">

        <ListPreference
            android:key="change_theme"
            android:title="@string/change_theme"
            android:entries="@array/themelistentries"
            android:entryValues="@array/themelistvalues"/>

        <ListPreference
            android:key="change_cells"
            android:title="@string/change_cells"
            android:entries="@array/cellslistentries"
            android:entryValues="@array/cellslistvalues" />

    </PreferenceCategory>

</PreferenceScreen>