<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="140dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome_text_choose_theme" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">
                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lighThemeChosen"
                    android:layout_weight="1"
                    android:background="@drawable/standard_selector"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textOn="@string/light_style"
                    android:textOff="@string/light_style"
                    android:gravity="center"/>
                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/darkThemeChosen"
                    android:layout_margin="10dp"
                    android:background="@drawable/standard_selector"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textOn="@string/dark_style"
                    android:textOff="@string/dark_style"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:text="@string/welcome_text_choose_count_icons"
                android:gravity="center" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">
                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cellsCountOpt1"
                    android:textOn="@string/cells_opt_1"
                    android:textOff="@string/cells_opt_1"
                    android:layout_margin="10dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:background="@drawable/standard_selector"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"/>
                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cellsCountOpt2"
                    android:textOn="@string/cells_opt_2"
                    android:textOff="@string/cells_opt_2"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_weight="1"
                    android:background="@drawable/standard_selector"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/welcomeNextBtn"
        android:layout_width="match_parent"
        android:text="@string/welcome_next_btn"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/margin_next_button"
        android:layout_marginRight="@dimen/margin_next_button"
        android:layout_marginStart="@dimen/margin_next_button"
        android:layout_marginLeft="@dimen/margin_next_button"
        android:layout_marginBottom="@dimen/margin_bottom_next_button"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_shape_button"/>
</RelativeLayout>