<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favoriteHeadLayout"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:gravity="center"
            android:textSize="20sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#9E9E9E"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_below="@+id/favoriteHeadLayout"
        android:layout_above="@+id/uri_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uri_finder"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="10dp"
            android:background="#9E9E9E"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:id="@+id/editTextURL"
            style="@style/Widget.AppCompat.EditText"
            android:inputType="textUri" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/enter"
                android:id="@+id/enterURLbtn"
                android:textSize="15sp"
                android:background="@drawable/rounded_shape_button"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/history"
                android:id="@+id/histURLbtn"
                android:textSize="15sp"
                android:background="@drawable/rounded_shape_button"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>